typescript/checker/tests/conformance/classes/classDeclarations/classWithPredefinedTypesAsNames2.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/classes/classDeclarations/classWithPredefinedTypesAsNames2.ts:3:7
  |
3 | class void {}
  |       ^^^^

